# project_gmo

./: README.md  data_protein.npy  project.py  project_acc.py  project_func.py  project_parity.py  project_protein_prediction.py
progetto/: CMakeLists.txt  build.sh
progetto/include/: GenReactionAutomata.hpp  GenReactionAutomata.tpl.hpp  ReactionAutomata.hpp  ReactionAutomata.tpl.hpp  Reactions.hpp
progetto/my_program/python_module/: test.py
progetto/src/: CMakeLists.txt  ReactionAutomata.cpp  ReactionAutomata_py.cpp  main.cpp
